--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongodb": "^5.2.0",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.1"
+    "socket.io": "^4.6.1",
+    "https": "^1.0.0"
   }
 }
